# Infotecs_internship_c

./: .gitignore  CMakeLists.txt  README.md
Program1/: CMakeLists.txt  Program1.cpp  Program1.h  ThreadManager.cpp  ThreadManager.h
Program2/: CMakeLists.txt  Program2.cpp  Program2.h  SocketClient.cpp  SocketClient.h  SocketManager.cpp  SocketManager.h  SocketServer.cpp  SocketServer.h
